--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_image_slideshow: ^0.1.1
   fluttertoast: ^8.0.8
   shared_preferences: ^2.0.7
+  cached_network_image: ^3.1.0
 
 
 
