--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   cached_network_image: ^3.1.0
   sqflite: ^2.0.0+4
   share: ^2.0.4
+  adaptive_dialog: ^1.1.0
+  flutter_animated_dialog: ^2.0.1
+
 
 
 
