--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   email_validator: ^2.0.1
   group_button: ^3.3.1
   expandable: ^5.0.1
+  im_stepper: ^0.1.3
+  cupertino_stepper: ^0.2.0
 
 
 
