--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.khsomat.khsomat">
-   <application
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <application
         android:label="خصومات"
         android:icon="@mipmap/ic_launcher">
         <activity
