--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 	<dict>
+        <key>io.flutter.embedded_views_preview</key>
+        <string>YES</string>
 		<key>CFBundleDevelopmentRegion</key>
 		<string>$(DEVELOPMENT_LANGUAGE)</string>
 		<key>CFBundleExecutable</key>
@@ -43,5 +45,10 @@
 		<false/>
 		<key>UIStatusBarHidden</key>
 		<true/>
+		<key>CFBundleLocalizations</key>
+        <array>
+        	<string>en</string>
+        	<string>ar</string>
+        </array>
 	</dict>
 </plist>
