--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,9 @@ dependencies:
   expandable: ^5.0.1
   im_stepper: ^0.1.3
   cupertino_stepper: ^0.2.0
+  webview_flutter: ^2.1.2
+  easy_localization: ^3.0.0
+
 
 
 
@@ -101,6 +104,7 @@ flutter:
      - assets/images/
      - assets/fonts/
      - assets/loading/
+     - assets/translations/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
