--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   cupertino_stepper: ^0.2.0
   webview_flutter: ^2.1.2
   easy_localization: ^3.0.0
+  select_form_field: ^2.2.0
+
 
 
 
