--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   easy_localization: ^3.0.0
   select_form_field: ^2.2.0
   translator: ^0.1.7
+  awesome_notifications: ^0.6.17
 
 
 
