--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,11 @@ dependencies:
   select_form_field: ^2.2.0
   translator: ^0.1.7
   awesome_notifications: ^0.6.17
+  pagination_view: ^2.0.0-nullsafety.0
+  flutter_paginator_ns: ^2.0.0
+
+
+
 
 
 
