--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,8 +58,8 @@ dependencies:
   email_validator: ^2.0.1
   group_button: ^3.3.1
   expandable: ^5.0.1
-  im_stepper: ^0.1.3
-  cupertino_stepper: ^0.2.0
+#  im_stepper: ^0.1.3
+#  cupertino_stepper: ^0.2.0
   webview_flutter: ^2.1.2
   easy_localization: ^3.0.0
   select_form_field: ^2.2.0
